--- a/index.html
+++ b/index.html
@@ -484,18 +484,32 @@ document.querySelectorAll('img.no-actions').forEach(img => {
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-                            <div class="modal-body section7-modal section7-modal-content">
-                                <img class="bank-icon" src="./img/kakaobank.png" alt="카카오뱅크" class="no-actions">
-                                <span class="account-text">카카오뱅크 7979-79-13360 이호선</span><br>
-                                <button class="copy-btn" data-account="카카오뱅크 7979-79-13360 이호선">
-                                    <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-                                        fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" viewBox="0 0 24 24">
-                                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
-                                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
-                                    </svg>
-                                    복사하기
-                                </button>
+                            <div class="modal-body section7-modal section7-modal-content account-row">
+                            <img class="bank-icon no-actions" src="./img/kakaobank.png" alt="카카오뱅크">
+                            <span class="account-text">카카오뱅크 7979-79-13360 이호선</span>
+                            <button class="copy-btn" data-account="카카오뱅크 7979-79-13360 이호선">
+                                <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" viewBox="0 0 24 24">
+                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                                </svg>
+                                복사하기
+                            </button>
+                            </div>
+                            
+                            <div class="modal-body section7-modal section7-modal-content account-row">
+                            <img class="bank-icon no-actions" src="./img/shbank.png" alt="신한은행">
+                            <span class="account-text">신한은행 110-004-296616 이종진</span>
+                            <button class="copy-btn" data-account="신한은행 110-004-296616 이종진">
+                                <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" viewBox="0 0 24 24">
+                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                                </svg>
+                                복사하기
+                            </button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
