--- a/index.html
+++ b/index.html
@@ -450,18 +450,17 @@ document.querySelectorAll('img.no-actions').forEach(img => {
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-                            <div class="modal-body section7-modal section7-modal-content">
-                                <img class="bank-icon" src="./img/ibk.png" alt="IBK 기업은행" class="no-actions">
-                                <span class="account-text">기업은행 356-011-775-02-011 김승목</span><br>
-                                <button class="copy-btn" data-account="기업 356-011-775-02-011 김승목">
-                                    <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-                                        fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" viewBox="0 0 24 24">
-                                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
-                                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
-                                    </svg>
-                                    복사하기
-                                </button>
+                            <div class="modal-body section7-modal section7-modal-content account-row">
+                            <img class="bank-icon no-actions" src="./img/ibk.png" alt="기업은행">
+                            <span class="account-text">기업은행 356-011-775-02-011 김승목</span>
+                            <button class="copy-btn" data-account="기업은행 356-011-775-02-011 김승목">
+                                <svg class="copy-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                fill="none" stroke="white" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" viewBox="0 0 24 24">
+                                <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
+                                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
+                                </svg>
+                            </button>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
@@ -494,7 +493,6 @@ document.querySelectorAll('img.no-actions').forEach(img => {
                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
                                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
                                 </svg>
-                                복사하기
                             </button>
                             </div>
                             
@@ -508,7 +506,7 @@ document.querySelectorAll('img.no-actions').forEach(img => {
                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
                                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
                                 </svg>
-                                복사하기
+                                
                             </button>
                             </div>
                             <div class="modal-footer">
