--- a/index.html
+++ b/index.html
@@ -515,16 +515,15 @@
         <!-- 음악 제어 버튼 (항상 고정) -->
         <!-- <button id="music-toggle" title="음악 재생/정지">🔇</button> -->
         <!-- 음악 토글 버튼 -->
-        <button id="music-toggle" aria-label="Toggle Music">
+        <!-- <button id="music-toggle" aria-label="Toggle Music">
             <span id="music-icon">
-                <!-- 초기 상태: OFF (🔇 아이콘) -->
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
                     stroke-width="2" viewBox="0 0 24 24">
                     <path d="M9 18V5l12-2v13M3 3l18 18" />
                     <circle cx="6" cy="18" r="3" />
                 </svg>
             </span>
-        </button>
+        </button> -->
 
         <!-- 메시지 바 -->
         <div id="music-msg-bar" class="music-msg-bar">
